# AI-Product-Listing-Creator

./: .gitignore  README.md
backend/: .gitignore  config.py  db.py  gemini_client.py  main.py  pyproject.toml
frontend/: components.json  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/create/: page.tsx
frontend/src/context/: AppContext.tsx
frontend/src/features/ai-listing/: AiListingStep.tsx  index.ts
frontend/src/features/category/: CategorySelection.tsx  constants.ts  index.ts
frontend/src/features/homepage/: BenefitsSection.tsx  CtaSection.tsx  FlowPreviewSection.tsx  HeroSection.tsx  HowItWorksSection.tsx  LandingFooter.tsx  LandingPage.tsx  index.ts
frontend/src/features/onboarding/store/: useOnboardingStore.ts
frontend/src/features/pricing/: index.ts
frontend/src/features/pricing/ui/: PricingStep.tsx
frontend/src/features/publish/: index.ts
frontend/src/features/publish/model/: usePublish.ts
frontend/src/features/publish/ui/: CopyListingButton.tsx  PublishActions.tsx  PublishStep.tsx  ShareListingButton.tsx
frontend/src/features/upload/: UploadStep.tsx  index.ts
frontend/src/hooks/: useLocalStorage.ts
frontend/src/shared/components/: AdaptiveImagePreview.tsx  AppHeader.tsx  Button.tsx  DemoToast.tsx  InlineLinkButton.tsx  ListingCard.tsx  ProgressTracker.tsx  SecondaryActionButton.tsx
frontend/src/shared/components/ui/: button.tsx
frontend/src/shared/providers/: MainProvider.tsx  TanstackQueryProvider.tsx
frontend/src/shared/styles/: globals.css
frontend/src/shared/types/: index.ts
